--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-archivesBaseName = 'k8s-ticket-booking'
+archivesBaseName = 'k8s-order-management'
 version = '1.0.0'
 tasks.named('test') {
 	useJUnitPlatform()
